--- a/venus.html
+++ b/venus.html
@@ -32,7 +32,7 @@
                 </video>
         </div>
         <div id="tabs-bottom">
-            <a href="mercury.html">Mercury</a>
+            <a href="mecury.html">Mercury</a>
             <a href="index.html">Home</a>
             <a href="earth.html">Earth</a>
         </div>
