--- a/sun.html
+++ b/sun.html
@@ -35,7 +35,7 @@
         <div id="tabs-bottom">
             <a href="neptune.html">Neptune</a>
             <a href="index.html">Home</a>
-            <a href="venus.html">Venus</a>
+            <a href="mecury.html">Mercury</a>
         </div>
     </div>
 </body>
